Fix z-index

--- a/src/shared/Sidebar.css
+++ b/src/shared/Sidebar.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  z-index: 1000;
 }
 
 .Sidebar .projects {
